# multi-agent-defense

./: .gitignore  aar_translation_agents.py  agent_req_doc.md  convert_doc_to_docx.py  convert_to_md.py  crew_job_app.ipynb  doc_processor.md  pyproject.toml  requirements.txt  research_write_article_agent.ipynb  summarized_file.md  tasks.md  test_pdf.py  todo.md  utils.py
AAR/USSOF/: Attachment (2) - JDW ATC AAR.docx  Attachment (3) - JDW CCS AAR.doc
AAR/clean/USSOF/: Attachment_(1)_-_JDW_CCSC_AAR.md  (+5 more)
defense_quickstart_audio_transcription_translation/: frontend.py
output/: aar_analysis_20241123_211945.md  aar_analysis_JDW ABC 2-13 AAR FINAL_20241123_213251.md  aar_analysis_sample_aar_20241123_234016.md  aar_analysis_sample_aar_20241123_234612.md  aar_analysis_sample_aar_20241124_040312.md  aar_analysis_sample_aar_20241124_100310.md  aar_analysis_sample_aar_20241124_123739.md  aar_analysis_sample_aar_20241124_124210.md  aar_analysis_sample_aar_20241124_124534.md  aar_analysis_sample_aar_20241124_125339.md  aar_analysis_sample_aar_20241124_132246.md  aar_analysis_sample_aar_20241124_151338.md  aar_analysis_sample_aar_20241124_151636.md  aar_analysis_sample_aar_20241124_151837.md  aar_analysis_test_20241123_223301.md  aar_analysis_test_20241123_230817.md  aar_analysis_test_20241123_232042.md  doc_processor.md  processing_times.md  summarized_file.md
output/old/: aar_analysis_sample_aar_20241123_232843.md  aar_analysis_sample_aar_20241124_113434.md  aar_analysis_sample_aar_20241124_122130.md  aar_analysis_test_20241123_231048.md  processing_times.md
(+4 files in other folders)
