[tool.poetry]
name = "multi-agent-defense"
version = "0.1.0"
description = "AI Agents for Ukrainian AAR Translation and Summarization"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "0.80.0"
crewai-tools = "0.14.0"
langchain = "0.3.8"
langchain-community = "0.3.8"
langchain-core = "0.3.21"
pypdf = "^5.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
